Model binding with data validations

--- a/DotNet2.Mvc.ModelBinding/DotNet2.Mvc.ModelBinding.csproj
+++ b/DotNet2.Mvc.ModelBinding/DotNet2.Mvc.ModelBinding.csproj
@@ -5,11 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="PersonController.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Compile Include="wwwroot\PersonModel.cs" />
   </ItemGroup>
 
   <ItemGroup>
